# wattle

algs/aaa/: controller.py  engine.py  renderer.py
algs/aaa/.github/: copilot-instructions.md
algs/aaa/aaa/: MUJOCO_LOG.TXT  QUICKSTART.md  README.md  README_SIMPLE.md  USAGE.md  action_publisher.py  demo_simple.py  simulator.py  state_viewer.py  test_system.py
algs/aaa/bak/: controller.py  engine.py  renderer.py
docs/01_PRD/: product_requirement.md
docs/02_Architecture/: module_design.md  state_machine.md  system_architecture.md
docs/03_Interface/: api_spec.md  communication_protocol.md
docs/04_Data/: storage_design.md
docs/05_Test/: test_cases.md  test_plan.md
docs/06_Deployment/: config_example.yaml  deployment_guide.md  operations_manual.md
docs/07_Changelog/: changelog.md
front/: .cta.json  CONTROL_FLOW_MIGRATION.md  FEATURES.md  FRONTEND_IMPLEMENTATION.md  IMPLEMENTATION-REPORT.md  package.json  pnpm-lock.yaml  vite.config.ts
front/control-flow-system/: package.json
front/control-flow-system/app/: globals.css  layout.tsx  page.tsx
front/src/: main.tsx  routeTree.gen.ts  styles.css
front/src/components/: create-task-group-dialog.tsx  site-header.tsx  task-filters.tsx  task-group-detail.tsx  task-group-filters.tsx  task-group-table.tsx  task-table.tsx  theme-toggle.tsx
front/src/data/: mock-data.ts
front/src/hooks/: demo.form.ts  theme-context.tsx
front/src/routes/: __root.tsx  _app.tsx  _control.tsx  control-flow.tsx  dashboard.tsx  nodes.tsx  workflows.tsx
front/src/services/: api.ts
services/cube/: cube_visualization.rrd
services/wattle-scheduler/: .env  ARCHITECTURE_OPTIMIZATION_REPORT.md  Cargo.toml  DAG_IMPLEMENTATION.md  rustfmt.toml  verify_optimizations.sh
services/wattle-scheduler/apis/: FINAL_SUMMARY.md  MULTI_LANGUAGE_SDK_SUMMARY.md  PROJECT_COMPLETION_REPORT.md  QUICKSTART.md
services/wattle-scheduler/apis copy/cxx/: Cargo.toml  build.rs
services/wattle-scheduler/apis copy/cxx/examples/: advanced_demo.cpp  simple_demo.cpp
services/wattle-scheduler/apis copy/cxx/include/: wattle_client.hpp  wattle_cxx.h
services/wattle-scheduler/apis copy/cxx/src/: wattle_client.cpp
services/wattle-scheduler/apis copy/python/: Cargo.toml  pyproject.toml
services/wattle-scheduler/apis copy/python/examples/: demo.py
services/wattle-scheduler/apis copy/python/python/wattle_py/: __init__.py
services/wattle-scheduler/apis/cxx/: COMPLETION_SUMMARY.md  Cargo.toml  README.md  build.rs  build_and_run.sh
services/wattle-scheduler/apis/cxx/examples/: CMakeLists.txt  basic_demo.cpp
services/wattle-scheduler/apis/cxx/src/: lib.rs
services/wattle-scheduler/apis/python/: Cargo.toml
services/wattle-scheduler/apis/python/src/: lib.rs
services/wattle-scheduler/apis/rust/: Cargo.toml  IMPLEMENTATION_SUMMARY.md  README.md
services/wattle-scheduler/apis/rust/benches/: messaging_benchmark.rs
services/wattle-scheduler/apis/rust/examples/: arrow_processing.rs  async_pubsub.rs  basic_usage.rs  client.rs  publisher.rs  publisher_new.rs  query.rs  request_client.rs  server.rs  subscriber.rs  subscriber_new.rs
services/wattle-scheduler/apis/rust/src/: arrow_support.rs  client.rs  client_old.rs  errors.rs  lib.rs  lib_new.rs  lib_old.rs  metrics.rs  types.rs
services/wattle-scheduler/apis/rust/tests/: integration_test.rs  integration_tests.rs  wattle_test.rs
services/wattle-scheduler/binaries/apiserver/: Cargo.toml
services/wattle-scheduler/binaries/apiserver/examples/: api_components.rs
services/wattle-scheduler/binaries/apiserver/src/: args.rs  config.rs  main.rs
services/wattle-scheduler/binaries/apiserver/src/server/: metrics.rs  mod.rs  models.rs  response.rs  state.rs
services/wattle-scheduler/binaries/apiserver/src/server/apis/: mod.rs  task copy.rs  task_group.rs  worker.rs  workflow.rs
services/wattle-scheduler/binaries/apiserver/tests/: integration_test.rs
services/wattle-scheduler/binaries/cli/: Cargo.toml
services/wattle-scheduler/binaries/cli/examples/: cli_usage.rs
services/wattle-scheduler/binaries/cli/src/: main.rs
services/wattle-scheduler/binaries/cli/tests/: cli_test.rs
services/wattle-scheduler/configs/: config.example.toml  config.toml  wattle.db
services/wattle-scheduler/crates/coordinator/: Cargo.toml
services/wattle-scheduler/crates/coordinator/examples/: workflow_management.rs
services/wattle-scheduler/crates/coordinator/src/: coordinator.rs  lib.rs  spec.rs  worker_manager.rs  workflow_manager.rs  zenoh_manager.rs
services/wattle-scheduler/crates/coordinator/tests/: coordinator_test.rs  dag_integration_test.rs
services/wattle-scheduler/crates/core/: Cargo.toml
services/wattle-scheduler/crates/core/examples/: basic_usage.rs  workflow_dag_example.rs
services/wattle-scheduler/crates/core/src/: config.rs  errors.rs  events.rs  lib.rs  traits.rs  types.rs
services/wattle-scheduler/crates/core/tests/: integration_test.rs  workflow_dag_test.rs
services/wattle-scheduler/crates/runtime/: Cargo.toml
services/wattle-scheduler/crates/runtime/examples/: task_execution.rs
services/wattle-scheduler/crates/runtime/src/: executor.rs  lib.rs
services/wattle-scheduler/crates/runtime/tests/: executor_test.rs  test_basic.rs
services/wattle-scheduler/crates/scheduler/: Cargo.toml
services/wattle-scheduler/crates/scheduler/src/: lib.rs  scheduler.rs  spec.rs
services/wattle-scheduler/crates/storage/: Cargo.toml
services/wattle-scheduler/crates/storage/examples/: database_operations.rs
services/wattle-scheduler/crates/storage/migrations/: 20250825034820_init.sql  20250830000000_rename_to_workflows.sql  20250830120000_add_worker_inputs_outputs.sql  20250831120000_add_performance_indexes.sql
services/wattle-scheduler/crates/storage/src/: lib.rs  model.rs
services/wattle-scheduler/crates/storage/src/repositories/: log_repository.rs  mod.rs  worker_repository.rs  workflow_repository.rs
services/wattle-scheduler/crates/storage/tests/: repository_test.rs
services/wattle-scheduler/docs/: API.md  ARCHITECTURE.md  DEPLOYMENT.md  OPTIMIZATION_REPORT.md  PROJECT_ANALYSIS.md  README.md
(+50 files in other folders)
