[workspace]
members = [
    "binaries/apiserver",
    "binaries/cli",
    "crates/core",
    "crates/runtime",
    "crates/scheduler",
    "crates/storage",
    "apis/rust",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"


[workspace.dependencies]
eyre = "0.6.12"
tokio = { version = "1.47.1", features = ["full"] }
serde = { version = "1.0.219", features = ["derive"] }
chrono = { version = "0.4.41", features = ["serde"] }
tracing = "0.1.41"
serde_json = "*"
zenoh = "1.5.0"