[workspace]
members = [
    "binaries/apiserver",
    "binaries/cli", 
    "crates/core",
    "crates/runtime",
    "crates/coordinator", 
    "crates/storage",
    "apis/rust",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"


[workspace.dependencies]
eyre = "0.6.12"
tokio = { version = "1.37.0", features = ["full"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4.38", features = ["serde"], default-features = false }
tracing = "0.1.41"
zenoh = "0.11.0"
arrow = { version = "45.0.0", features = ["ipc"], default-features = false }
arrow-schema = "45.0.0"
arrow-array = "45.0.0"