[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "wattle-py"
description = "Python SDK for Wattle Scheduler - Worker-to-Worker communication using Zenoh + Arrow"
authors = [{name = "Wattle Team", email = "team@wattle.dev"}]
license = {text = "MIT"}
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9", 
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Rust",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "pyarrow>=10.0.0",
]

[project.urls]
Homepage = "https://github.com/wattle/wattle-scheduler"
Repository = "https://github.com/wattle/wattle-scheduler"

[tool.maturin]
python-source = "python"
module-name = "wattle_py._internal"
features = ["pyo3/extension-module"]
