[package]
name = "wattle-cxx"
version = "0.1.0"
edition = "2021"
description = "Wattle C++ SDK using cxx bindings"
license = "MIT"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
# Wattle Core
wattle-rs = { path = "../rust" }

# CXX bindings
cxx = "1.0"

# Async runtime
tokio = { version = "1.0", features = ["full"] }

# Error handling
eyre = "0.6"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Arrow support
arrow-array = "40.0"

# Logging
tracing = "0.1"

[build-dependencies]
cxx-build = "1.0"
