[package]
name = "wattle-cxx"
version = "0.1.0"
edition = "2021"
description = "Wattle C++ SDK using cxx bindings"
license = "MIT"

# Add empty workspace table to avoid inheriting parent workspace configuration
[workspace]

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
# CXX bindings
cxx = "1.0"

# Async runtime
tokio = { version = "1.0", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Arrow support
arrow-array = "40.0"

# Zenoh messaging
zenoh = "1.5"

# UUID generation
uuid = { version = "1.0", features = ["v4"] }

[build-dependencies]
cxx-build = "1.0"
