[package]
name = "wattle-py"
version = "0.1.0"
edition = "2021"

# Add empty workspace table to avoid inheriting parent workspace configuration
[workspace]

[lib]
name = "wattle_py"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.20", features = ["extension-module"] }
tokio = { version = "1", features = ["full"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4"] }
zenoh = "1.5"
arrow-array = "40.0"
arrow-schema = "40.0"
arrow-json = "40.0"
futures = "0.3"
