[package]
name = "wattle-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
eyre.workspace = true
serde_json.workspace = true
serde = { workspace = true, features = ["derive"] }
zenoh.workspace = true
arrow-array = "40.0"
arrow-schema = "40.0"
arrow-json = "40.0"
tokio = { workspace = true, features = ["full"] }
futures = "0.3"
uuid = { version = "1.0", features = ["v4"] }
chrono = { workspace = true, features = ["serde"] }

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }
tempfile = "3.0"
chrono = { workspace = true }