[package]
name = "wattle-rs"
version = "0.1.0"
edition = "2021"
authors = ["Wattle Team <team@wattle.dev>"]
description = "High-performance message passing and data processing system"
license = "MIT OR Apache-2.0"
repository = "https://github.com/noobHuKai/wattle"
keywords = ["messaging", "pubsub", "data-processing", "async"]
categories = ["network-programming", "asynchronous"]

[dependencies]
# Async runtime and futures
tokio = { version = "1.40", features = ["full"] }
futures = "0.3"
async-trait = "0.1"

# Error handling
eyre = "0.6"
thiserror = "1.0"

# Data serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", optional = true }

# Apache Arrow support
arrow = { version = "50.0", optional = true }
arrow-json = { version = "50.0", optional = true }
arrow-ipc = { version = "50.0", optional = true }

# Concurrency and channels
dashmap = "5.5"
parking_lot = "0.12"

# UUID generation for request tracking
uuid = { version = "1.10", features = ["v4"] }

# TOML parsing for configuration
toml = "0.8"

# Base64 encoding (used internally)
base64 = "0.22"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Compression support
flate2 = { version = "1.0", optional = true }

# Metrics and monitoring
metrics = { version = "0.21", optional = true }

[dev-dependencies]
tokio-test = "0.4"
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1.4"
chrono = { version = "0.4", features = ["serde"] }

[lib]
name = "wattle_rs"
path = "src/lib.rs"

[[bench]]
name = "messaging_benchmark"
harness = false

[[example]]
name = "basic_usage"
path = "examples/basic_usage.rs"

[[example]]
name = "async_pubsub"
path = "examples/async_pubsub.rs"

[[example]]
name = "arrow_processing"
path = "examples/arrow_processing.rs"

[features]
default = ["json", "compression"]
json = ["dep:serde_json"]
arrow = ["dep:arrow", "dep:arrow-json", "dep:arrow-ipc"]
compression = ["dep:flate2"]
metrics = ["dep:metrics"]
