[package]
name = "cli"
version.workspace = true
edition.workspace = true

[dependencies]
clap = { version = "4.5.41", features = ["derive"] }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
eyre = { workspace = true }
reqwest = { version = "0.11", features = ["json"] }
coordinator = { path = "../../crates/coordinator" }
core = { path = "../../crates/core" }

[dev-dependencies]
tempfile = "3.0"
