[package]
name = "coordinator"
version.workspace = true
edition.workspace = true

[dependencies]
storage = { path = "../storage" }
runtime = { path = "../runtime" }
core = { path = "../core" }
eyre = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
zenoh = { workspace = true }
which = "8.0.0"
rand = "*"

[dev-dependencies]
tempfile = "3.0"
serde_json = { workspace = true }